Update lists at 20250805-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,6 +138,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
+allow 135.125.239.51;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -146,6 +147,14 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
+allow 146.19.143.119;
+allow 146.19.143.132;
+allow 146.19.143.16;
+allow 146.19.143.181;
+allow 146.19.143.225;
+allow 146.19.143.54;
+allow 146.19.143.92;
+allow 146.19.254.163;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -212,6 +221,11 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.124.32.101;
+allow 176.124.32.122;
+allow 176.124.32.130;
+allow 176.124.32.145;
+allow 176.124.32.171;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -270,6 +284,14 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.123.53.164;
+allow 185.123.53.165;
+allow 185.123.53.174;
+allow 185.123.53.184;
+allow 185.123.53.217;
+allow 185.123.53.22;
+allow 185.123.53.226;
+allow 185.123.53.42;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -542,6 +564,11 @@ allow 192.42.116.27;
 allow 192.42.116.28;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.109.120.199;
+allow 193.109.120.230;
+allow 193.109.120.59;
+allow 193.109.120.71;
+allow 193.109.120.8;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -549,6 +576,8 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
+allow 193.233.201.122;
+allow 193.233.201.93;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
@@ -564,6 +593,12 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
+allow 194.26.141.106;
+allow 194.26.141.109;
+allow 194.26.141.110;
+allow 194.26.141.24;
+allow 194.26.141.45;
+allow 194.26.141.75;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.53.137.156;
@@ -632,8 +667,8 @@ allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
+allow 2001:41d0:701:1100::968d;
 allow 2001:41d0:805:d300::2b19:1929;
-allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -836,8 +871,8 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.4;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1084,7 +1119,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1331,6 +1365,54 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
+allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::145a:4f4d;
+allow 2a10:1fc0:1::1c97:5209;
+allow 2a10:1fc0:1::201b:fde8;
+allow 2a10:1fc0:1::27c8:f14;
+allow 2a10:1fc0:1::28e8:2439;
+allow 2a10:1fc0:1::2acd:670c;
+allow 2a10:1fc0:1::3120:be14;
+allow 2a10:1fc0:1::317b:c7b3;
+allow 2a10:1fc0:1::3a85:fc4a;
+allow 2a10:1fc0:1::463b:c574;
+allow 2a10:1fc0:1::4953:f0d1;
+allow 2a10:1fc0:1::49fd:671e;
+allow 2a10:1fc0:1::6e6d:3f93;
+allow 2a10:1fc0:1::7028:40e3;
+allow 2a10:1fc0:1::7072:6325;
+allow 2a10:1fc0:1::709e:5af4;
+allow 2a10:1fc0:1::736f:432a;
+allow 2a10:1fc0:1::86d8:ed21;
+allow 2a10:1fc0:1::902c:9891;
+allow 2a10:1fc0:1::91c7:7465;
+allow 2a10:1fc0:1::97fa:bc35;
+allow 2a10:1fc0:1::9862:7394;
+allow 2a10:1fc0:1::9a61:242e;
+allow 2a10:1fc0:1::9c89:5f8;
+allow 2a10:1fc0:1::9ef2:318e;
+allow 2a10:1fc0:1::a04e:42ef;
+allow 2a10:1fc0:1::a06f:421;
+allow 2a10:1fc0:1::a187:7bdf;
+allow 2a10:1fc0:1::a2d9:c960;
+allow 2a10:1fc0:1::a8af:1603;
+allow 2a10:1fc0:1::a94d:cec3;
+allow 2a10:1fc0:1::b989:f19b;
+allow 2a10:1fc0:1::b9b6:1c9a;
+allow 2a10:1fc0:1::bf4a:70cd;
+allow 2a10:1fc0:1::c181:cad7;
+allow 2a10:1fc0:1::c5e5:1656;
+allow 2a10:1fc0:1::c81a:ecdc;
+allow 2a10:1fc0:1::c89d:565d;
+allow 2a10:1fc0:1::cae0:9c9;
+allow 2a10:1fc0:1::cfba:db18;
+allow 2a10:1fc0:1::d3ed:ed37;
+allow 2a10:1fc0:1::d3f0:7036;
+allow 2a10:1fc0:1::d54e:8f12;
+allow 2a10:1fc0:1::d6af:9460;
+allow 2a10:1fc0:1::d8fd:efbf;
+allow 2a10:1fc0:1::da9b:f7cd;
+allow 2a10:1fc0:1::df12:4fa1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1417,7 +1499,6 @@ allow 37.114.50.142;
 allow 37.114.50.18;
 allow 37.114.50.27;
 allow 37.114.63.5;
-allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
 allow 37.228.129.153;
@@ -1446,6 +1527,13 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.199.122;
+allow 45.129.199.159;
+allow 45.129.199.162;
+allow 45.129.199.235;
+allow 45.129.199.239;
+allow 45.129.199.70;
+allow 45.129.199.84;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
@@ -1540,6 +1628,7 @@ allow 46.183.216.212;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.92.35;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
@@ -1555,7 +1644,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1622,6 +1710,9 @@ allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
+allow 77.72.85.133;
+allow 77.72.85.168;
+allow 77.72.85.176;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.241.60.207;
@@ -1696,6 +1787,11 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.227.114.153;
+allow 91.235.234.143;
+allow 91.235.234.145;
+allow 91.235.234.67;
+allow 91.235.234.74;
+allow 91.235.234.92;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
