--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -138,6 +138,7 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 131.72.79.38;
+deny 135.125.239.51;
 deny 135.125.239.70;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -146,6 +147,14 @@ deny 139.99.8.57;
 deny 141.98.11.62;
 deny 144.126.133.74;
 deny 144.208.79.169;
+deny 146.19.143.119;
+deny 146.19.143.132;
+deny 146.19.143.16;
+deny 146.19.143.181;
+deny 146.19.143.225;
+deny 146.19.143.54;
+deny 146.19.143.92;
+deny 146.19.254.163;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
@@ -212,6 +221,11 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
+deny 176.124.32.101;
+deny 176.124.32.122;
+deny 176.124.32.130;
+deny 176.124.32.145;
+deny 176.124.32.171;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
@@ -270,6 +284,14 @@ deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
+deny 185.123.53.164;
+deny 185.123.53.165;
+deny 185.123.53.174;
+deny 185.123.53.184;
+deny 185.123.53.217;
+deny 185.123.53.22;
+deny 185.123.53.226;
+deny 185.123.53.42;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -542,6 +564,11 @@ deny 192.42.116.27;
 deny 192.42.116.28;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.109.120.199;
+deny 193.109.120.230;
+deny 193.109.120.59;
+deny 193.109.120.71;
+deny 193.109.120.8;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -549,6 +576,8 @@ deny 193.189.100.197;
 deny 193.189.100.198;
 deny 193.189.100.199;
 deny 193.189.100.200;
+deny 193.233.201.122;
+deny 193.233.201.93;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.140;
@@ -564,6 +593,12 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.15.36.117;
+deny 194.26.141.106;
+deny 194.26.141.109;
+deny 194.26.141.110;
+deny 194.26.141.24;
+deny 194.26.141.45;
+deny 194.26.141.75;
 deny 194.26.192.77;
 deny 194.53.137.102;
 deny 194.53.137.156;
@@ -632,8 +667,8 @@ deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
 deny 2001:41d0:701:1100::57d3;
+deny 2001:41d0:701:1100::968d;
 deny 2001:41d0:805:d300::2b19:1929;
-deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
@@ -836,8 +871,8 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.29;
-deny 23.191.200.3;
-deny 23.191.200.4;
+deny 23.191.200.30;
+deny 23.191.200.31;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -1084,7 +1119,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1331,6 +1365,54 @@ deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
+deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::145a:4f4d;
+deny 2a10:1fc0:1::1c97:5209;
+deny 2a10:1fc0:1::201b:fde8;
+deny 2a10:1fc0:1::27c8:f14;
+deny 2a10:1fc0:1::28e8:2439;
+deny 2a10:1fc0:1::2acd:670c;
+deny 2a10:1fc0:1::3120:be14;
+deny 2a10:1fc0:1::317b:c7b3;
+deny 2a10:1fc0:1::3a85:fc4a;
+deny 2a10:1fc0:1::463b:c574;
+deny 2a10:1fc0:1::4953:f0d1;
+deny 2a10:1fc0:1::49fd:671e;
+deny 2a10:1fc0:1::6e6d:3f93;
+deny 2a10:1fc0:1::7028:40e3;
+deny 2a10:1fc0:1::7072:6325;
+deny 2a10:1fc0:1::709e:5af4;
+deny 2a10:1fc0:1::736f:432a;
+deny 2a10:1fc0:1::86d8:ed21;
+deny 2a10:1fc0:1::902c:9891;
+deny 2a10:1fc0:1::91c7:7465;
+deny 2a10:1fc0:1::97fa:bc35;
+deny 2a10:1fc0:1::9862:7394;
+deny 2a10:1fc0:1::9a61:242e;
+deny 2a10:1fc0:1::9c89:5f8;
+deny 2a10:1fc0:1::9ef2:318e;
+deny 2a10:1fc0:1::a04e:42ef;
+deny 2a10:1fc0:1::a06f:421;
+deny 2a10:1fc0:1::a187:7bdf;
+deny 2a10:1fc0:1::a2d9:c960;
+deny 2a10:1fc0:1::a8af:1603;
+deny 2a10:1fc0:1::a94d:cec3;
+deny 2a10:1fc0:1::b989:f19b;
+deny 2a10:1fc0:1::b9b6:1c9a;
+deny 2a10:1fc0:1::bf4a:70cd;
+deny 2a10:1fc0:1::c181:cad7;
+deny 2a10:1fc0:1::c5e5:1656;
+deny 2a10:1fc0:1::c81a:ecdc;
+deny 2a10:1fc0:1::c89d:565d;
+deny 2a10:1fc0:1::cae0:9c9;
+deny 2a10:1fc0:1::cfba:db18;
+deny 2a10:1fc0:1::d3ed:ed37;
+deny 2a10:1fc0:1::d3f0:7036;
+deny 2a10:1fc0:1::d54e:8f12;
+deny 2a10:1fc0:1::d6af:9460;
+deny 2a10:1fc0:1::d8fd:efbf;
+deny 2a10:1fc0:1::da9b:f7cd;
+deny 2a10:1fc0:1::df12:4fa1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1417,7 +1499,6 @@ deny 37.114.50.142;
 deny 37.114.50.18;
 deny 37.114.50.27;
 deny 37.114.63.5;
-deny 37.187.5.192;
 deny 37.221.208.71;
 deny 37.228.129.128;
 deny 37.228.129.153;
@@ -1446,6 +1527,13 @@ deny 43.160.194.14;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.129.199.122;
+deny 45.129.199.159;
+deny 45.129.199.162;
+deny 45.129.199.235;
+deny 45.129.199.239;
+deny 45.129.199.70;
+deny 45.129.199.84;
 deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
@@ -1540,6 +1628,7 @@ deny 46.183.216.212;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.246.92.35;
 deny 46.250.243.29;
 deny 46.253.4.208;
 deny 46.38.243.210;
@@ -1555,7 +1644,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1622,6 +1710,9 @@ deny 77.48.28.193;
 deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
+deny 77.72.85.133;
+deny 77.72.85.168;
+deny 77.72.85.176;
 deny 77.81.247.72;
 deny 78.142.18.219;
 deny 80.241.60.207;
@@ -1696,6 +1787,11 @@ deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.227.114.153;
+deny 91.235.234.143;
+deny 91.235.234.145;
+deny 91.235.234.67;
+deny 91.235.234.74;
+deny 91.235.234.92;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
