--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -16,8 +16,8 @@ deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
 deny 2001:41d0:701:1100::57d3;
+deny 2001:41d0:701:1100::968d;
 deny 2001:41d0:805:d300::2b19:1929;
-deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
@@ -345,7 +345,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -592,6 +591,54 @@ deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
+deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::145a:4f4d;
+deny 2a10:1fc0:1::1c97:5209;
+deny 2a10:1fc0:1::201b:fde8;
+deny 2a10:1fc0:1::27c8:f14;
+deny 2a10:1fc0:1::28e8:2439;
+deny 2a10:1fc0:1::2acd:670c;
+deny 2a10:1fc0:1::3120:be14;
+deny 2a10:1fc0:1::317b:c7b3;
+deny 2a10:1fc0:1::3a85:fc4a;
+deny 2a10:1fc0:1::463b:c574;
+deny 2a10:1fc0:1::4953:f0d1;
+deny 2a10:1fc0:1::49fd:671e;
+deny 2a10:1fc0:1::6e6d:3f93;
+deny 2a10:1fc0:1::7028:40e3;
+deny 2a10:1fc0:1::7072:6325;
+deny 2a10:1fc0:1::709e:5af4;
+deny 2a10:1fc0:1::736f:432a;
+deny 2a10:1fc0:1::86d8:ed21;
+deny 2a10:1fc0:1::902c:9891;
+deny 2a10:1fc0:1::91c7:7465;
+deny 2a10:1fc0:1::97fa:bc35;
+deny 2a10:1fc0:1::9862:7394;
+deny 2a10:1fc0:1::9a61:242e;
+deny 2a10:1fc0:1::9c89:5f8;
+deny 2a10:1fc0:1::9ef2:318e;
+deny 2a10:1fc0:1::a04e:42ef;
+deny 2a10:1fc0:1::a06f:421;
+deny 2a10:1fc0:1::a187:7bdf;
+deny 2a10:1fc0:1::a2d9:c960;
+deny 2a10:1fc0:1::a8af:1603;
+deny 2a10:1fc0:1::a94d:cec3;
+deny 2a10:1fc0:1::b989:f19b;
+deny 2a10:1fc0:1::b9b6:1c9a;
+deny 2a10:1fc0:1::bf4a:70cd;
+deny 2a10:1fc0:1::c181:cad7;
+deny 2a10:1fc0:1::c5e5:1656;
+deny 2a10:1fc0:1::c81a:ecdc;
+deny 2a10:1fc0:1::c89d:565d;
+deny 2a10:1fc0:1::cae0:9c9;
+deny 2a10:1fc0:1::cfba:db18;
+deny 2a10:1fc0:1::d3ed:ed37;
+deny 2a10:1fc0:1::d3f0:7036;
+deny 2a10:1fc0:1::d54e:8f12;
+deny 2a10:1fc0:1::d6af:9460;
+deny 2a10:1fc0:1::d8fd:efbf;
+deny 2a10:1fc0:1::da9b:f7cd;
+deny 2a10:1fc0:1::df12:4fa1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
