Update lists at 20250805-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -18,6 +18,7 @@ allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:701:1100::968d;
 allow 2001:41d0:805:d300::2b19:1929;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -144,6 +145,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -266,7 +268,6 @@ allow 2620:18c:0:192::e0:166;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
-allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -591,54 +592,6 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
-allow 2a10:1fc0:1::1078:9b3b;
-allow 2a10:1fc0:1::145a:4f4d;
-allow 2a10:1fc0:1::1c97:5209;
-allow 2a10:1fc0:1::201b:fde8;
-allow 2a10:1fc0:1::27c8:f14;
-allow 2a10:1fc0:1::28e8:2439;
-allow 2a10:1fc0:1::2acd:670c;
-allow 2a10:1fc0:1::3120:be14;
-allow 2a10:1fc0:1::317b:c7b3;
-allow 2a10:1fc0:1::3a85:fc4a;
-allow 2a10:1fc0:1::463b:c574;
-allow 2a10:1fc0:1::4953:f0d1;
-allow 2a10:1fc0:1::49fd:671e;
-allow 2a10:1fc0:1::6e6d:3f93;
-allow 2a10:1fc0:1::7028:40e3;
-allow 2a10:1fc0:1::7072:6325;
-allow 2a10:1fc0:1::709e:5af4;
-allow 2a10:1fc0:1::736f:432a;
-allow 2a10:1fc0:1::86d8:ed21;
-allow 2a10:1fc0:1::902c:9891;
-allow 2a10:1fc0:1::91c7:7465;
-allow 2a10:1fc0:1::97fa:bc35;
-allow 2a10:1fc0:1::9862:7394;
-allow 2a10:1fc0:1::9a61:242e;
-allow 2a10:1fc0:1::9c89:5f8;
-allow 2a10:1fc0:1::9ef2:318e;
-allow 2a10:1fc0:1::a04e:42ef;
-allow 2a10:1fc0:1::a06f:421;
-allow 2a10:1fc0:1::a187:7bdf;
-allow 2a10:1fc0:1::a2d9:c960;
-allow 2a10:1fc0:1::a8af:1603;
-allow 2a10:1fc0:1::a94d:cec3;
-allow 2a10:1fc0:1::b989:f19b;
-allow 2a10:1fc0:1::b9b6:1c9a;
-allow 2a10:1fc0:1::bf4a:70cd;
-allow 2a10:1fc0:1::c181:cad7;
-allow 2a10:1fc0:1::c5e5:1656;
-allow 2a10:1fc0:1::c81a:ecdc;
-allow 2a10:1fc0:1::c89d:565d;
-allow 2a10:1fc0:1::cae0:9c9;
-allow 2a10:1fc0:1::cfba:db18;
-allow 2a10:1fc0:1::d3ed:ed37;
-allow 2a10:1fc0:1::d3f0:7036;
-allow 2a10:1fc0:1::d54e:8f12;
-allow 2a10:1fc0:1::d6af:9460;
-allow 2a10:1fc0:1::d8fd:efbf;
-allow 2a10:1fc0:1::da9b:f7cd;
-allow 2a10:1fc0:1::df12:4fa1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -670,7 +623,6 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
-allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
@@ -678,7 +630,6 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
-allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -703,7 +654,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
@@ -714,4 +664,5 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
+allow 2a14:7c0:6500::1;
 allow 2c0f:6c0:0:d::d28b;
