--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -147,13 +148,6 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
-allow 146.19.143.119;
-allow 146.19.143.132;
-allow 146.19.143.16;
-allow 146.19.143.181;
-allow 146.19.143.225;
-allow 146.19.143.54;
-allow 146.19.143.92;
 allow 146.19.254.163;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -221,11 +215,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.124.32.101;
-allow 176.124.32.122;
-allow 176.124.32.130;
-allow 176.124.32.145;
-allow 176.124.32.171;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -237,7 +226,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -284,14 +272,6 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
-allow 185.123.53.164;
-allow 185.123.53.165;
-allow 185.123.53.174;
-allow 185.123.53.184;
-allow 185.123.53.217;
-allow 185.123.53.22;
-allow 185.123.53.226;
-allow 185.123.53.42;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -564,11 +544,6 @@ allow 192.42.116.27;
 allow 192.42.116.28;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.109.120.199;
-allow 193.109.120.230;
-allow 193.109.120.59;
-allow 193.109.120.71;
-allow 193.109.120.8;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -576,8 +551,6 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
-allow 193.233.201.122;
-allow 193.233.201.93;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
@@ -593,13 +566,8 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
-allow 194.26.141.106;
-allow 194.26.141.109;
-allow 194.26.141.110;
-allow 194.26.141.24;
-allow 194.26.141.45;
-allow 194.26.141.75;
 allow 194.26.192.77;
+allow 194.28.99.216;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.87.55.98;
@@ -669,6 +637,7 @@ allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:701:1100::968d;
 allow 2001:41d0:805:d300::2b19:1929;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -845,6 +814,7 @@ allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -870,10 +840,12 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.5;
+allow 23.191.200.4;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -917,6 +889,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1040,7 +1013,6 @@ allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
-allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -1365,54 +1337,6 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
-allow 2a10:1fc0:1::1078:9b3b;
-allow 2a10:1fc0:1::145a:4f4d;
-allow 2a10:1fc0:1::1c97:5209;
-allow 2a10:1fc0:1::201b:fde8;
-allow 2a10:1fc0:1::27c8:f14;
-allow 2a10:1fc0:1::28e8:2439;
-allow 2a10:1fc0:1::2acd:670c;
-allow 2a10:1fc0:1::3120:be14;
-allow 2a10:1fc0:1::317b:c7b3;
-allow 2a10:1fc0:1::3a85:fc4a;
-allow 2a10:1fc0:1::463b:c574;
-allow 2a10:1fc0:1::4953:f0d1;
-allow 2a10:1fc0:1::49fd:671e;
-allow 2a10:1fc0:1::6e6d:3f93;
-allow 2a10:1fc0:1::7028:40e3;
-allow 2a10:1fc0:1::7072:6325;
-allow 2a10:1fc0:1::709e:5af4;
-allow 2a10:1fc0:1::736f:432a;
-allow 2a10:1fc0:1::86d8:ed21;
-allow 2a10:1fc0:1::902c:9891;
-allow 2a10:1fc0:1::91c7:7465;
-allow 2a10:1fc0:1::97fa:bc35;
-allow 2a10:1fc0:1::9862:7394;
-allow 2a10:1fc0:1::9a61:242e;
-allow 2a10:1fc0:1::9c89:5f8;
-allow 2a10:1fc0:1::9ef2:318e;
-allow 2a10:1fc0:1::a04e:42ef;
-allow 2a10:1fc0:1::a06f:421;
-allow 2a10:1fc0:1::a187:7bdf;
-allow 2a10:1fc0:1::a2d9:c960;
-allow 2a10:1fc0:1::a8af:1603;
-allow 2a10:1fc0:1::a94d:cec3;
-allow 2a10:1fc0:1::b989:f19b;
-allow 2a10:1fc0:1::b9b6:1c9a;
-allow 2a10:1fc0:1::bf4a:70cd;
-allow 2a10:1fc0:1::c181:cad7;
-allow 2a10:1fc0:1::c5e5:1656;
-allow 2a10:1fc0:1::c81a:ecdc;
-allow 2a10:1fc0:1::c89d:565d;
-allow 2a10:1fc0:1::cae0:9c9;
-allow 2a10:1fc0:1::cfba:db18;
-allow 2a10:1fc0:1::d3ed:ed37;
-allow 2a10:1fc0:1::d3f0:7036;
-allow 2a10:1fc0:1::d54e:8f12;
-allow 2a10:1fc0:1::d6af:9460;
-allow 2a10:1fc0:1::d8fd:efbf;
-allow 2a10:1fc0:1::da9b:f7cd;
-allow 2a10:1fc0:1::df12:4fa1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1444,7 +1368,6 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
-allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
@@ -1452,7 +1375,6 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
-allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -1477,7 +1399,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
@@ -1488,6 +1409,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
+allow 2a14:7c0:6500::1;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1499,6 +1421,7 @@ allow 37.114.50.142;
 allow 37.114.50.18;
 allow 37.114.50.27;
 allow 37.114.63.5;
+allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
 allow 37.228.129.153;
@@ -1527,13 +1450,6 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.199.122;
-allow 45.129.199.159;
-allow 45.129.199.162;
-allow 45.129.199.235;
-allow 45.129.199.239;
-allow 45.129.199.70;
-allow 45.129.199.84;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
@@ -1543,7 +1459,6 @@ allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.161;
-allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1551,7 +1466,6 @@ allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
-allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
@@ -1593,7 +1507,6 @@ allow 45.79.144.222;
 allow 45.80.158.167;
 allow 45.80.158.23;
 allow 45.80.158.27;
-allow 45.80.158.69;
 allow 45.83.104.137;
 allow 45.83.31.79;
 allow 45.84.107.101;
@@ -1710,9 +1623,6 @@ allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
-allow 77.72.85.133;
-allow 77.72.85.168;
-allow 77.72.85.176;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.241.60.207;
@@ -1787,11 +1697,6 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.227.114.153;
-allow 91.235.234.143;
-allow 91.235.234.145;
-allow 91.235.234.67;
-allow 91.235.234.74;
-allow 91.235.234.92;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
