Update lists at 20250806-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -76,6 +76,7 @@ allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
+allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
 allow 107.189.4.12;
@@ -98,6 +99,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -806,6 +808,7 @@ allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -831,7 +834,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -879,6 +881,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -928,6 +931,7 @@ allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1656,7 +1660,9 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.222.33;
 allow 87.120.254.132;
+allow 88.151.192.2;
 allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1710,6 +1716,7 @@ allow 94.102.51.15;
 allow 94.131.2.131;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.156.152.234;
 allow 94.16.115.121;
 allow 94.16.121.91;
 allow 94.230.208.147;
