Update lists at 20250807-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -254,6 +254,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.55.70.24;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.24;
@@ -321,6 +322,8 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
+allow 185.220.101.1;
+allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -331,8 +334,11 @@ allow 185.220.101.106;
 allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
+allow 185.220.101.11;
 allow 185.220.101.110;
+allow 185.220.101.12;
 allow 185.220.101.129;
+allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -343,6 +349,7 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
+allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
@@ -353,6 +360,7 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
+allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.152;
@@ -361,6 +369,7 @@ allow 185.220.101.154;
 allow 185.220.101.155;
 allow 185.220.101.156;
 allow 185.220.101.157;
+allow 185.220.101.16;
 allow 185.220.101.160;
 allow 185.220.101.162;
 allow 185.220.101.163;
@@ -370,6 +379,7 @@ allow 185.220.101.166;
 allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
+allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.172;
 allow 185.220.101.173;
@@ -378,6 +388,7 @@ allow 185.220.101.175;
 allow 185.220.101.176;
 allow 185.220.101.178;
 allow 185.220.101.179;
+allow 185.220.101.18;
 allow 185.220.101.180;
 allow 185.220.101.182;
 allow 185.220.101.183;
@@ -387,8 +398,13 @@ allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
+allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
+allow 185.220.101.2;
+allow 185.220.101.20;
+allow 185.220.101.21;
+allow 185.220.101.3;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -397,6 +413,7 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
+allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -407,6 +424,7 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
+allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -417,10 +435,14 @@ allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
+allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
 allow 185.220.101.63;
+allow 185.220.101.7;
+allow 185.220.101.8;
+allow 185.220.101.9;
 allow 185.220.101.96;
 allow 185.220.101.97;
 allow 185.220.101.98;
@@ -760,6 +782,7 @@ allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
+allow 212.192.23.129;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
@@ -832,11 +855,11 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -859,6 +882,7 @@ allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
+allow 2.58.56.65;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -955,6 +979,7 @@ allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2605:e440:3::3ef;
+allow 2605:e440:38::21a;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
@@ -1140,6 +1165,9 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::1;
+allow 2a0b:f4c2::10;
+allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
@@ -1195,6 +1223,17 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
+allow 2a0b:f4c2::12;
+allow 2a0b:f4c2::13;
+allow 2a0b:f4c2::14;
+allow 2a0b:f4c2::15;
+allow 2a0b:f4c2::16;
+allow 2a0b:f4c2::17;
+allow 2a0b:f4c2::18;
+allow 2a0b:f4c2::19;
+allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
+allow 2a0b:f4c2::21;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1227,6 +1266,8 @@ allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::3;
+allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1242,6 +1283,11 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
+allow 2a0b:f4c2::5;
+allow 2a0b:f4c2::6;
+allow 2a0b:f4c2::7;
+allow 2a0b:f4c2::8;
+allow 2a0b:f4c2::9;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1403,7 +1449,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1430,6 +1475,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
